UI. Fixed Z-index of dropdown and modal windows.

--- a/src/components/navbar.scss
+++ b/src/components/navbar.scss
@@ -74,7 +74,7 @@
             display: flex;
             flex-direction: column;
             padding-left: 0;
-            z-index: 2;
+            z-index: 1;
 
             li {
               background-color: $lightblack;
